objects/FieloEE__ErrorLog__c.object
<CustomObject>
    <description>Relevant information registered when an unexpected error occurs. This is a Fieloâ€™s internal object.</description>
    <fields>
        <fullName>FieloEE__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Type__c</fullName>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__UserId__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>FieloEE__All_Error_Logs</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Error Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>